--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ total{
 box-shadow: -1px -14px 19px -3px rgba(0,0,0,0.75) inset;
 -webkit-box-shadow: -1px -14px 19px -3px rgba(0,0,0,0.75) inset;
 -moz-box-shadow: -1px -14px 19px -3px rgba(0,0,0,0.75) inset;
+    padding-top: 50px;
 }
 
 input{
